[package]
name = "rama-net-apple-networkextension"
description = "Apple Network Extension support for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "non-blocking", "network", "rama"]
categories = ["asynchronous", "network-programming", "api-bindings", "security"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-apple-darwin"
targets = ["x86_64-apple-darwin"]

[features]
default = []
# Optional [dial9] runtime telemetry support.
#
# Building with this feature requires `--cfg tokio_unstable`.
#
# [dial9]: https://github.com/dial9-rs/dial9-tokio-telemetry
dial9 = ["dep:dial9-tokio-telemetry", "dep:dial9-trace-format", "rama-core/dial9"]

[dependencies]
dial9-tokio-telemetry = { workspace = true, optional = true }
dial9-trace-format = { workspace = true, optional = true }
libc = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-net = { workspace = true }
rama-utils = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
