[package]
name = "rama-net"
description = "rama network types and utilities"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "non-blocking", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[features]
default = []
http = ["dep:rama-http-types", "dep:sha2", "dep:itertools", "dep:hex"]
tls = ["dep:hex", "dep:md5", "dep:sha2", "dep:itertools"]
rustls = ["tls", "dep:rustls"]
boring = ["tls", "dep:boring", "dep:nom"]
telemetry = ["rama-core/telemetry"]

[dependencies]
base64 = { workspace = true }
boring = { workspace = true, optional = true }
bytes = { workspace = true }
const_format = { workspace = true }
futures-lite = { workspace = true }
headers = { workspace = true }
hex = { workspace = true, optional = true }
ipnet = { workspace = true }
itertools = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }
nom = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
rama-core = { version = "0.2.0-alpha.7", path = "../rama-core" }
rama-http-types = { version = "0.2.0-alpha.7", path = "../rama-http-types", optional = true }
rama-utils = { version = "0.2.0-alpha.7", path = "../rama-utils" }
rustls = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true, optional = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "io-std", "io-util", "net"] }
tracing = { workspace = true }
venndb = { workspace = true, optional = true }

[dev-dependencies]
itertools = { workspace = true }
nom = { workspace = true }
quickcheck = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
