[package]
name = "rama-net"
description = "rama network types and utilities"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "non-blocking", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
http = ["dep:rama-http-types", "dep:sha2", "dep:itertools", "dep:hex", "dep:md5"]
tls = ["dep:hex", "dep:md5", "dep:sha2", "dep:itertools"]
opentelemetry = ["rama-core/opentelemetry"]

[dependencies]
ahash = { workspace = true }
const_format = { workspace = true }
flume = { workspace = true, features = ["async"] }
hex = { workspace = true, optional = true }
ipnet = { workspace = true }
itertools = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }
nom = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
psl = { workspace = true }
radix_trie = { workspace = true }
rama-core = { workspace = true }
rama-http-types = { workspace = true, optional = true }
rama-macros = { workspace = true }
rama-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true, optional = true }
smallvec = { workspace = true, features = ["write"] }
smol_str = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["macros", "fs", "io-std", "io-util", "net"] }
venndb = { workspace = true, optional = true }

[dev-dependencies]
itertools = { workspace = true }
nom = { workspace = true }
quickcheck = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }

[lints]
workspace = true
