[package]
name = "rama-net"
description = "rama network types and utilities"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "non-blocking", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[features]
default = []
http = ["dep:rama-http-types", "dep:sha2", "dep:hex", "dep:md5"]
tls = ["dep:hex", "dep:md5", "dep:sha2"]
opentelemetry = ["rama-core/opentelemetry"]
# Optional [dial9] runtime telemetry support.
#
# Building with this feature requires `--cfg tokio_unstable`.
#
# [dial9]: https://github.com/dial9-rs/dial9-tokio-telemetry
dial9 = ["dep:dial9-tokio-telemetry", "dep:dial9-trace-format", "rama-core/dial9"]

[dependencies]
ahash = { workspace = true }
const_format = { workspace = true }
dial9-tokio-telemetry = { workspace = true, optional = true }
dial9-trace-format = { workspace = true, optional = true }
flume = { workspace = true, features = ["async"] }
hex = { workspace = true, optional = true }
ipnet = { workspace = true }
itertools = { workspace = true }
md5 = { workspace = true, optional = true }
nom = { workspace = true }
parking_lot = { workspace = true }
percent-encoding = { workspace = true }
pin-project-lite = { workspace = true }
psl = { workspace = true }
radix_trie = { workspace = true }
rama-core = { workspace = true }
rama-http-types = { workspace = true, optional = true }
rama-macros = { workspace = true }
rama-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true, optional = true }
socket2 = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["macros", "fs", "io-std", "io-util", "net"] }
tokio-util = { workspace = true }
venndb = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_IO"] }

[dev-dependencies]
itertools = { workspace = true }
nom = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }

[lints]
workspace = true
