[package]
name = "rama-pac"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rama-http = { workspace = true }
rama-net = { workspace = true }
rama-core = { workspace = true }
rama-http-types = { workspace = true }
boa_runtime = "0.20.0"
boa_engine = "0.20.0"

[lints]
workspace = true
