[package]
name = "rama-proxy"
description = "proxy types and utilities for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["memory-db", "csv"]
memory-db = ["dep:venndb", "rama-net/venndb"]
live-update = ["dep:arc-swap"]
http = ["rama-net/http"]
csv = ["dep:tokio", "tokio/fs"]

[dependencies]
arc-swap = { workspace = true, optional = true }
rama-core = { version = "0.2.0-alpha.2", path = "../rama-core" }
rama-net = { version = "0.2.0-alpha.2", path = "../rama-net" }
rama-utils = { version = "0.2.0-alpha.2", path = "../rama-utils" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
venndb = { workspace = true, optional = true }

[dev-dependencies]
itertools = { workspace = true }
rama-http-types = { version = "0.2.0-alpha.2", path = "../rama-http-types" }
rama-net = { version = "0.2.0-alpha.2", path = "../rama-net", features = ["http"] }
rama-tcp = { version = "0.2.0-alpha.2", path = "../rama-tcp", features = ["http"] }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-test = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
