[package]
name = "rama-proxy"
description = "proxy types and utilities for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "proxy", "db", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
memory-db = ["dep:venndb", "rama-net/venndb"]
live-update = ["dep:arc-swap"]
csv = ["dep:tokio", "tokio/fs", "dep:base64"]

[dependencies]
arc-swap = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
rama-core = { workspace = true }
rama-net = { workspace = true, features = ["http"] }
rama-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, optional = true }
unicode-normalization = { workspace = true }
venndb = { workspace = true, optional = true }

[dev-dependencies]
itertools = { workspace = true }
rama-http-types = { workspace = true }
rama-net = { workspace = true, features = ["http"] }
rama-tcp = { workspace = true, features = ["http"] }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
